<resources>
    <string name="app_name">TO - Atrakcja</string>

    <!-- MainActivity -->
    <string name="AppName">Atrakcja</string>
    <string name="GPS">Mapa okolicy</string>
    <string name="Gallery">Mapy konkretnych miast</string>
    <string name="Places">Pobliskie obiekty</string>
    <string name="Options">Opcje</string>
    <string name="LoginButton">Dla administratorów</string>

    <!-- GPSActivity -->
    <string name="normalmap">Domyślna mapa</string>
    <string name="hybridmap">Mapa hybrydowa</string>
    <string name="terrainmap">Mapa terenowa</string>

    <!-- LoginActivity -->
    <string name="LoginTitle">Logowanie administratora</string>
    <string name="TryToLogInButton">Zaloguj</string>
    <string name="LoginHint">login</string>
    <string name="PasswordHint">haslo</string>

    <!-- AdministratorActivity -->
    <string name="AdminTitle">Panel Administratora</string>
    <string name="ManageMaps">Zarządzaj mapami</string>
    <string name="ManagePlaces">Zarządzaj miejscami</string>
    <string name="Logout">Wyloguj</string>

    <!-- ManageMapsActivity -->
    <string name="AddMaps">Dodaj mapę</string>
    <string name="DeleteMaps">Usuń mapę</string>

    <!-- AddMapsActivity -->
    <string name="AddMapsTitle">Dodawanie map</string>
    <string name="MapNameHint">Nazwa miejsca</string>
    <string name="MapURLHint">URL mapy</string>
    <string name="TryToAddMap">Dodaj mapę</string>

    <!-- DeleteMapsActivity -->
    <string name="DeleteMapsTitle">Usuwanie map</string>
    <string name="MapsTableHeaderName">Nazwa</string>
    <string name="MapsTableHeaderURL">Mapa</string>

    <!-- GalleryActivity -->
    <string name="GalleryTitle">Mapy miast</string>

    <!-- ManagePlacesActivity -->
    <string name="AddPlacesData">Dodaj nowe miejsce</string>
    <string name="AddPLacesCurrent">Dodaj nowe miejsce o współrzędnych w których się teraz znajdujesz</string>
    <string name="AddPLacesMap">Dodaj nowe miejsce poprzez kliknięcie na mapie</string>
    <string name="ManagePlacesAdmin">Zarządzaj istniejącymi miejscami</string>

    <!-- AddPLacesActivity -->
    <string name="AddPLace">Dodawanie miejsca</string>
    <string name="PlaceNameHint">Nazwa miejsca</string>
    <string name="PlaceTypeHint">Typ miejsca</string>
    <string name="PlaceOpeningHoursHint">Godzina otwarcia</string>
    <string name="PlaceClosingHoursHint">Godzina zamkniecia</string>
    <string name="PlaceDescriptionHint">Krótki opis</string>
    <string name="PlaceLongitudeHint">Długość geograficzna</string>
    <string name="PlaceLatitudeHint">Szerokość geograficzna</string>
    <string name="TryToAddPlace">Dodaj miejsce</string>

    <!-- EditPlaceActivity -->
    <string name="EditPlace">Edytowanie miejsca</string>
    <string name="TryToEditPlace">Zmien dane</string>
    <string name="TryToDeletePlace">Usun miejsce</string>
</resources>
