<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        style="@style/RelativeLayoutStyle"
        tools:context="com.example.przemek.to_atrakcja.activities.MainActivity">

    <TextView
            style="@style/TitleStyle"
            android:id="@+id/AppName"
            android:text="@string/AppName"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/GPS"
                style="@style/MenuButtonStyle"
                android:text="@string/GPS"
                android:onClick="GPS"
        />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Gallery"
                style="@style/MenuButtonStyle"
                android:text="@string/Gallery"
                android:onClick="Gallery"
                android:layout_below="@+id/GPS"
        />

    </RelativeLayout>


    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LoginButton"
            style="@style/MenuButtonStyle"
            android:text="@string/LoginButton"
            android:onClick="Login"
            android:layout_alignParentBottom="true"
    />

</RelativeLayout>
