<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/RelativeLayoutStyle"
        tools:context="com.example.przemek.to_atrakcja.activities.AddMapsActivity">

    <TextView
            style="@style/TitleStyle"
            android:id="@+id/AddMapsTitle"
            android:text="@string/AddMapsTitle"/>

    <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_below="@+id/AddMapsTitle"
            android:id="@+id/TextInputMapName">
        <EditText android:id="@+id/InputMapName"
                  style="@style/TextInputEditTextStyle"
                  android:inputType="text"
                  android:hint="@string/MapNameHint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_below="@+id/TextInputMapName"
            android:id="@+id/TextInputMapURL">
        <EditText android:id="@+id/InputMapURL"
                  style="@style/TextInputEditTextStyle"
                  android:inputType="text"
                  android:hint="@string/MapURLHint" />
    </android.support.design.widget.TextInputLayout>

    <TextView
            android:layout_below="@+id/TextInputMapURL"
            android:id="@+id/DatabaseResponseAddMap"
            style="@style/DatabaseResponseStyle"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TryToAddMapButton"
            style="@style/MenuButtonStyle"
            android:text="@string/TryToAddMap"
            android:onClick="TryToAddMap"
            android:layout_alignParentBottom="true"
            android:gravity="center"
    />

</RelativeLayout>