<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                style="@style/RelativeLayoutStyle"
                tools:context="com.example.przemek.to_atrakcja.activities.AddPlacesActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">

            <TextView
                    style="@style/TitleStyle"
                    android:id="@+id/AddPLace"
                    android:text="@string/AddPLace"/>

            <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_below="@+id/AddPLace"
                    android:id="@+id/TextInputPLaceName">
                <EditText android:id="@+id/InputPlaceName"
                          style="@style/TextInputEditTextStyle"
                          android:inputType="text"
                          android:hint="@string/PlaceNameHint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_below="@+id/TextInputPLaceName"
                    android:id="@+id/TextInputPlaceHours">
                <EditText android:id="@+id/InputPlaceHours"
                          style="@style/TextInputEditTextStyle"
                          android:inputType="text"
                          android:hint="@string/PlaceHoursHint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_below="@+id/TextInputPlaceHours"
                    android:id="@+id/TextInputPlaceDescription">
                <EditText android:id="@+id/InputPlaceDescription"
                          style="@style/TextInputEditTextStyle"
                          android:inputType="text"
                          android:hint="@string/PlaceDescriptionHint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_below="@+id/TextInputPlaceDescription"
                    android:id="@+id/TextInputPlaceLongitude">
                <EditText android:id="@+id/InputPLaceLongitude"
                          style="@style/TextInputEditTextStyle"
                          android:inputType="text"
                          android:hint="@string/PlaceLongitudeHint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_below="@+id/TextInputPlaceLongitude"
                    android:id="@+id/TextInputPlaceLatitude">
                <EditText android:id="@+id/InputPlaceLatitude"
                          style="@style/TextInputEditTextStyle"
                          android:inputType="text"
                          android:hint="@string/PlaceLatitudeHint" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                    android:layout_below="@+id/TextInputPlaceLatitude"
                    android:id="@+id/DatabaseResponseAddPlace"
                    style="@style/DatabaseResponseStyle"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/TryToAddPlaceButton"
                    style="@style/MenuButtonStyle"
                    android:text="@string/TryToAddPlace"
                    android:onClick="TryToAddPlace"
                    android:layout_below="@+id/DatabaseResponseAddPlace"
            />

        </RelativeLayout>


    </ScrollView>

</RelativeLayout>