<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                style="@style/RelativeLayoutStyle"
                tools:context="com.example.przemek.to_atrakcja.activities.DeleteMapsActivity">

    <TextView
            style="@style/TitleStyle"
            android:id="@+id/DeleteMapTitle"
            android:text="@string/DeleteMapsTitle"/>
    <TableLayout
            style="@style/TableLayoutStyle"
            android:id="@+id/TableHeadersDeleteMap"
            android:layout_below="@+id/DeleteMapTitle"
            android:layout_marginTop="@dimen/TableVerticalMargin">
        <TableRow>
            <LinearLayout
                    style="LinearLayoutTableStyle"
                    android:layout_weight="1"
                    android:background="@drawable/table_border">
                <TextView
                        android:text="@string/MapsTableHeaderName"
                        style="@style/TableCellNameStyle"/>
                <TextView
                        android:text="@string/MapsTableHeaderURL"
                        style="@style/TableCellURLStyle"/>
            </LinearLayout>
        </TableRow>

    </TableLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_below="@+id/TableHeadersDeleteMap">

            <TableLayout
                    android:id="@+id/TableDeleteMapData"
                    style="@style/TableLayoutStyle" >
            </TableLayout>
    </ScrollView>

    <TextView
            android:layout_below="@+id/TableHeadersDeleteMap"
            android:id="@+id/DatabaseResponseDeleteMaps"
            style="@style/DatabaseResponseStyle"/>

</RelativeLayout>